test_fm/_test32.ref
Error: unknown array base type 'Hugo' in '_test32.nj' on line 8
