test_fm/_test32.nj
//
// unknown array base type
//

public class Main extends Object {

  public static void Main() {
    local Hugo[][] h;
  }

}
